...
            zipCodeTextField
        ]
    }
    
    // MARK: - UI Setup
    private func setupUI() {
        title = "Add Customer"
        view.backgroundColor = .white
        
        // Setup ScrollView
        scrollView.translatesAutoresizingMaskIntoConstraints = false
        contentView.translatesAutoresizingMaskIntoConstraints = false
        view.addSubview(scrollView)
...
