...
        control.addAction(UIAction { _ in
            onMode(control.selectedSegmentIndex == 1)
        }, for: .valueChanged)
        header.addArrangedSubview(control)
        if addEnabled {
            let add = UIButton(type: .system)
            add.setTitle("Add", for: .normal)
            add.addAction(UIAction { _ in onAdd() }, for: .touchUpInside)
            header.addArrangedSubview(add)
        }
        return header
    }

...
